--- a/app/src/main/res/layout/list_row_story.xml
+++ b/app/src/main/res/layout/list_row_story.xml
@@ -133,6 +133,19 @@
             android:layout_width="1dp"
             android:layout_height="match_parent"
             android:background="@android:color/darker_gray" />
+
+
+        <com.facebook.share.widget.ShareButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/fb_share_button"
+            android:text="Fb share"
+            android:textAllCaps="true"/>
+
+        <TextView
+            android:layout_width="1dp"
+            android:layout_height="match_parent"
+            android:background="@android:color/darker_gray" />
     </LinearLayout>
 
     <TextView
